<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"> 
        
        <TextView
          android:text="@string/tv_red"
          android:gravity="center_horizontal"
          android:background="#aa0000"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1" /> 
          
        <TextView
          android:text="@string/tv_green"
          android:gravity="center_horizontal"
          android:background="#00aa00"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1"/>
        
        <TextView
          android:text="@string/tv_blue"
          android:gravity="center_horizontal"
          android:background="#0000aa"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1"/> 
          
        <TextView
          android:text="@string/tv_yellow"
          android:gravity="center_horizontal"
          android:background="#aaaa00"
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:layout_weight="1"/> 
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        
        <TextView
        	android:text="@string/tv_one"
        	android:textSize="15pt"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"/>
        
        <TextView
        	android:text="@string/tv_two"
        	android:textSize="15pt"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"/>
        
        <TextView
        	android:text="@string/tv_three"
        	android:textSize="15pt"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"/>
        
        <TextView
        	android:text="@string/tv_four"
        	android:textSize="15pt"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"/>
    </LinearLayout>
    
</LinearLayout>
